nebula vsearch note 1
Signed-off-by: Zhi Yiliu <2584074296@qq.com>

--- a/docs/.obsidian/appearance.json
+++ b/docs/.obsidian/appearance.json
@@ -1,4 +1,5 @@
 {
-  "cssTheme": "Things",
-  "theme": "moonstone"
+  "cssTheme": "Dracula for Obsidian",
+  "theme": "moonstone",
+  "accentColor": ""
 }
