--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -325,7 +325,7 @@ nav:
           - "awk": notes/linux tools/3-awk.md
           - "find": notes/linux tools/4-find.md
   - PaperReading:
-      - index: paperreading/index.md
+      - index: paperreadings/index.md
       - Database Systems:
           - Do not use MMAP in DBMS: paperreadings/db/storage/NoMMAP.md
       - Vector Search:
