--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ mkdocs-minify-plugin
 mkdocs-git-revision-date-localized-plugin
 mkdocs-glightbox
 mkdocs-video
-# mkdocs-rss-plugin
-# rich # for mkdocs-toc-plugin
+mkdocs-rss-plugin
+#rich # for mkdocs-toc-plugin
