--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -348,9 +348,11 @@ nav:
       - SGLang 专题:
           - 一条 Request 在 SGLang 的前世今生: notes/sglang/一条 Request 在 SGLang 的前世今生.md
           - SGLang Schedular 技术变迁: notes/sglang/SGLang Scheduler 技术变迁.md
+          - SGLang Scheduler Evolution: notes/sglang/SGLang Scheduler Evolution.md
           - DP Attention: notes/sglang/DP Attention.md
-          - 从代码看 SGLang 的 KV Cache: notes/sglang/从代码看 SGLang 的 KV Cache.md
+          - 从代码看 SGLang 的 KV Cache: blogs/posts/从代码看 SGLang 的 KV Cache.md
           - 🚧 SGLang 中的 Speculative Decoding: notes/sglang/SGlang 中的 Speculative Decoding.md
+          - 🚧 SGLang 中的并行: notes/sgalng/SGLang 中的并行.md
       - PageAttention: blogs/posts/PageAttention.md
       - FlashAttention: blogs/posts/FlashAttention 原理 v1-v2.md
       - Vector Add Optimization Example: blogs/posts/Vector Add Optimization Example.md
