--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -341,6 +341,7 @@ nav:
           - 一条 Request 在 SGLang 的前世今生: notes/sglang/一条 Request 在 SGLang 的前世今生.md
           - SGLang Schedular 技术变迁: notes/sglang/SGLang Scheduler 技术变迁.md
           - SGLang Scheduler Evolution: notes/sglang/SGLang Scheduler Evolution.md
+          - RadixAttention 你需要知道的细节: notes/sglang/RadixAttention 你需要知道的细节.md
           - DP Attention: notes/sglang/DP Attention.md
           - 从代码看 SGLang 的 KV Cache: blogs/posts/从代码看 SGLang 的 KV Cache.md
           - 🚧 SGLang 中的 Speculative Decoding: notes/sglang/SGlang 中的 Speculative Decoding.md
